--- a/Round2/file12.Rmd
+++ b/Round2/file12.Rmd
@@ -1,10 +1,9 @@
 ---
-title: "Round2"
+title: "Gollnads Mixture"
 author: "Jonathan Rosenblatt"
 date: "8/2/2017"
 output: html_document
 ---
-
 
 
 ```{r preliminaries}
@@ -24,7 +23,6 @@ source('Gilron Effect of Cross Validatino.R')
 ## Signal in location
 effects <- seq(0, 0.5, length=3) # change in location
 
-
 ## Signal in scale
 Sigma <- diag(p)
 ```
@@ -32,10 +30,8 @@ Sigma <- diag(p)
 
 ## Fixed folds. Cross-Validated. All in one.
 ```{r}
-library(RhpcBLASctl)
-blas_set_num_threads(1)
-
-registerDoMC(cores=110)
+RhpcBLASctl::blas_set_num_threads(1)
+registerDoMC(cores=100)
 ```
 
 
@@ -65,22 +61,23 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     
     # Observables 
     ts <- list(
-      Oracle=t_Oracle(x1, x2, Sigma, Sigma),
-      Hotelling=t_Hotelling(x1, x2, FALSE),
-      Hotelling.shrink=t_Hotelling(x1, x2, TRUE),
-      lda.CV.1=t_lda_cv(noise, labels, labels, fold.ids, type=1),
-      lda.CV.2=t_lda_cv(noise, labels, labels, fold.ids, type=2),
-      lda.noCV.1=t_lda(noise, labels, noise, labels, type=1),
-      lda.noCV.2=t_lda(noise, labels, noise, labels, type=2),
-      sd=t_SD(x1, x2),
-      svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=1),
-      svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=1),
-      svm.CV.3=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=2),
-      svm.CV.4=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=2),
-      svm.noCV.1=t_svm(noise, labels, noise, labels, cost=cost.1, type=1),
-      svm.noCV.2=t_svm(noise, labels, noise, labels, cost=cost.2, type=1),
-      svm.noCV.3=t_svm(noise, labels, noise, labels, cost=cost.1, type=2),
-      svm.noCV.4=t_svm(noise, labels, noise, labels, cost=cost.2, type=2)
+        Oracle=t_Oracle(x1, x2, Sigma, Sigma),
+        Hotelling=t_Hotelling(x1, x2, FALSE),
+        Hotelling.shrink=t_Hotelling(x1, x2, TRUE),
+        Goeman=t_goeman(x1, x2),
+        lda.CV.1=t_lda_cv(noise, labels, labels, fold.ids, type=1),
+        # lda.CV.2=t_lda_cv(noise, labels, labels, fold.ids, type=2),
+        lda.noCV.1=t_lda(noise, labels, noise, labels, type=1),
+        # lda.noCV.2=t_lda(noise, labels, noise, labels, type=2),
+        sd=t_SD(x1, x2),
+        svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=1),
+        svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=1),
+        # svm.CV.3=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=2),
+        # svm.CV.4=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=2),
+        svm.noCV.1=t_svm(noise, labels, noise, labels, cost=cost.1, type=1),
+        svm.noCV.2=t_svm(noise, labels, noise, labels, cost=cost.2, type=1)
+        # svm.noCV.3=t_svm(noise, labels, noise, labels, cost=cost.1, type=2),
+        # svm.noCV.4=t_svm(noise, labels, noise, labels, cost=cost.2, type=2)
     )
     
     
@@ -111,19 +108,20 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
         Oracle=t_Oracle(x1, x2, Sigma, Sigma),
         Hotelling=t_Hotelling(x1, x2, FALSE),
         Hotelling.shrink=t_Hotelling(x1, x2, TRUE),
+        Goeman=t_goeman(x1, x2),
         lda.CV.1=t_lda_cv(noise, labels, labels, fold.ids, type=1),
-        lda.CV.2=t_lda_cv(noise, labels, labels, fold.ids, type=2),
+        # lda.CV.2=t_lda_cv(noise, labels, labels, fold.ids, type=2),
         lda.noCV.1=t_lda(noise, labels, noise, labels, type=1),
-        lda.noCV.2=t_lda(noise, labels, noise, labels, type=2),
+        # lda.noCV.2=t_lda(noise, labels, noise, labels, type=2),
         sd=t_SD(x1, x2),
         svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=1),
         svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=1),
-        svm.CV.3=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=2),
-        svm.CV.4=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=2),
+        # svm.CV.3=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=2),
+        # svm.CV.4=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=2),
         svm.noCV.1=t_svm(noise, labels, noise, labels, cost=cost.1, type=1),
-        svm.noCV.2=t_svm(noise, labels, noise, labels, cost=cost.2, type=1),
-        svm.noCV.3=t_svm(noise, labels, noise, labels, cost=cost.1, type=2),
-        svm.noCV.4=t_svm(noise, labels, noise, labels, cost=cost.2, type=2)
+        svm.noCV.2=t_svm(noise, labels, noise, labels, cost=cost.2, type=1)
+        # svm.noCV.3=t_svm(noise, labels, noise, labels, cost=cost.1, type=2),
+        # svm.noCV.4=t_svm(noise, labels, noise, labels, cost=cost.2, type=2)
       )
     } # End permutation
     
@@ -132,7 +130,8 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     for(i in seq_along(ts)){
       pvals[i] <- mean(ts[i]<=permuted[,i], na.rm=TRUE)
     }
-    
+    names(pvals) <- names(ts)
+
     c(effect=effect, pvals) 
   }
 } 
@@ -144,15 +143,14 @@ save.image(file=paste(file.name,".RData", sep=''))
 
 
 ```{r analyze multiple effects}
-# load("file2.RData")
+# load("file12.RData")
 err.bar <- round(3*sqrt(.05*.95/(n.replications)),3) # confidence limits of p-value
 .limits <- 0.05 + c(-err.bar,0,err.bar)
 
 pvals.1.9 %<>%  as.data.table()
 
-names(pvals.1.9)[-1] <- c('Oracle','Hotelling','Hotelling.shrink', 'LDA.CV.1', 'LDA.CV.2', 'LDA.noCV.1', 'LDA.noCV.2',  'SD','SVM.CV.1', 'SVM.CV.2', 'SVM.CV.3',  'SVM.CV.4','SVM.noCV.1', 'SVM.noCV.2', 'SVM.noCV.3','SVM.noCV.4')
-  
 pvals.melt <- melt(pvals.1.9, id.vars=c("effect"), variable.name='statistic') 
+pvals.melt <- pvals.melt[!(statistic %in% statistic.filter1),,]
 
 pvals.melt[,c("reject","effect.factor"):=list(as.numeric(value <= 0.05), as.factor(effect)),] 
 ```
