--- a/Round2/file22.Rmd
+++ b/Round2/file22.Rmd
@@ -23,7 +23,7 @@ source('Gilron Effect of Cross Validatino.R')
 effects <- seq(0, 0.5, length=3) # change in location
 
 ## Covariance
-Sigma <- browninan_cov(p,0.2)
+Sigma <- browninan_cov(p)
 lattice::levelplot(Sigma)
 Sigma.eigen <- eigen(Sigma)
 direction0 <- Sigma.eigen$vectors[,which.max(abs(Sigma.eigen$values))] 
@@ -144,8 +144,7 @@ err.bar <- round(3*sqrt(.05*.95/(n.replications)),3) # confidence limits of p-va
 pvals.1.9 %<>%  as.data.table()
 
 pvals.melt <- melt(pvals.1.9, id.vars=c("effect"), variable.name='statistic') 
-statistic.filter <- c("SVM.CV.3","SVM.CV.4","SVM.noCV.3","SVM.noCV.4")
-pvals.melt <- pvals.melt[!(statistic %in% statistic.filter),,]
+pvals.melt <- pvals.melt[!(statistic %in% statistic.filter1),,]
 
 pvals.melt[,c("reject","effect.factor"):=list(as.numeric(value <= 0.05), as.factor(effect)),] 
 ```
