--- a/Round2/file24.Rmd
+++ b/Round2/file24.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Increasing sequence of variances Signal in LOW PCs."
+title: "Increasing sequence of variances Signal in low variance PCs."
 author: "Jonathan Rosenblatt"
 date: "8/2/2017"
 output: html_document
@@ -152,8 +152,7 @@ err.bar <- round(3*sqrt(.05*.95/(n.replications)),3) # confidence limits of p-va
 pvals.1.9 %<>%  as.data.table()
 
 pvals.melt <- melt(pvals.1.9, id.vars=c("effect"), variable.name='statistic') 
-statistic.filter <- c("SVM.CV.3","SVM.CV.4","SVM.noCV.3","SVM.noCV.4")
-pvals.melt <- pvals.melt[!(statistic %in% statistic.filter),,]
+pvals.melt <- pvals.melt[!(statistic %in% statistic.filter1),,]
 
 pvals.melt[,c("reject","effect.factor"):=list(as.numeric(value <= 0.05), as.factor(effect)),] 
 ```
