--- a/Round2/Manuscript/Permuting_Accuracy.bib
+++ b/Round2/Manuscript/Permuting_Accuracy.bib
@@ -614,22 +614,21 @@ Supplementary Information: A complete compilation of results and R code for simu
   file = {Gilron et al_2016_Quantifying spatial pattern similarity in multivariate analysis using.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/3AE7RZEB/Gilron et al_2016_Quantifying spatial pattern similarity in multivariate analysis using.pdf:application/pdf;arXiv.org Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/F5VJ3TWX/1605.html:text/html}
 }
 
-@article{hemerik_exact_2014,
-  title = {Exact testing with random permutations},
-  abstract = {The way in which random permutations have been used in various permutation-based methods leads to anti-conservativeness, especially in multiple testing contexts. Problems arise in particular for Westfall and Young's maxT method, a more recent method by Meinshausen and a global test that we introduce. We illustrate this using simulations. We solve the problem of anti-conservativeness by proving that an exact test is obtained, if the identity map is added to the randomly drawn permutations.},
-  timestamp = {2016-08-02T19:07:59Z},
-  archivePrefix = {arXiv},
-  eprinttype = {arxiv},
-  eprint = {1411.7565},
-  primaryClass = {math, stat},
-  urldate = {2016-07-26},
-  journal = {arXiv:1411.7565 [math, stat]},
-  author = {Hemerik, Jesse and Goeman, Jelle},
-  month = nov,
-  year = {2014},
-  keywords = {62G09,Mathematics - Statistics Theory},
-  file = {Hemerik_Goeman_2014_Exact testing with random permutations.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/6NB6FSI9/Hemerik_Goeman_2014_Exact testing with random permutations.pdf:application/pdf;Hemerik_Goeman_2014_Exact testing with random permutations.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/DK287DKI/Hemerik_Goeman_2014_Exact testing with random permutations.pdf:application/pdf;arXiv.org Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/494EESV4/1411.html:text/html;arXiv.org Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/GKQ23FZS/1411.html:text/html}
+@Article{hemerik_exact_2014,
+	author="Hemerik, Jesse
+	and Goeman, Jelle",
+	title="Exact testing with random permutations",
+	journal="TEST",
+	year="2017",
+	month="Nov",
+	day="30",
+	abstract="When permutation methods are used in practice, often a limited number of random permutations are used to decrease the computational burden. However, most theoretical literature assumes that the whole permutation group is used, and methods based on random permutations tend to be seen as approximate. There exists a very limited amount of literature on exact testing with random permutations, and only recently a thorough proof of exactness was given. In this paper, we provide an alternative proof, viewing the test as a ``conditional Monte Carlo test'' as it has been called in the literature. We also provide extensions of the result. Importantly, our results can be used to prove properties of various multiple testing procedures based on random permutations.",
+	issn="1863-8260",
+	doi="10.1007/s11749-017-0571-1",
+	url="https://doi.org/10.1007/s11749-017-0571-1"
 }
+
+
 
 @article{pereira_machine_2009,
   series = {Mathematics in Brain Imaging},
