--- a/Round2/Manuscript/permuting_accuracy.tex
+++ b/Round2/Manuscript/permuting_accuracy.tex
@@ -815,7 +815,7 @@ It is also consistent with Figure~\ref{fig:dependence_1}, in the following aspec
 	\begin{subfigure}[t]{0.4\textwidth}
 		\centering
 		\includegraphics[width=1\linewidth]{"art/file31"}
-		\caption{$\mu$ in PC15 of $\Sigma$.}  
+		\caption{TODO: recompute figure. $\mu$ in PC15 of $\Sigma$.}  
 		\label{fig:dependence_42}	
 	\end{subfigure}
 
