--- a/Round2/file12.Rmd
+++ b/Round2/file12.Rmd
@@ -144,32 +144,12 @@ save.image(file=paste(file.name,".RData", sep=''))
 
 ```{r analyze multiple effects}
 # load("file12.RData")
-err.bar <- round(3*sqrt(.05*.95/(n.replications)),3) # confidence limits of p-value
-.limits <- 0.05 + c(-err.bar,0,err.bar)
-
-pvals.1.9 %<>%  as.data.table()
-
-pvals.melt <- melt(pvals.1.9, id.vars=c("effect"), variable.name='statistic') 
-pvals.melt <- pvals.melt[!(statistic %in% statistic.filter1),,]
-
-pvals.melt[,c("reject","effect.factor"):=list(as.numeric(value <= 0.05), as.factor(effect)),] 
+source('prepare_graphics.R')
+plot.3
 ```
 
 
 ```{r}
-plot.3 <- pvals.melt %>% 
-  ggplot(aes(y=reject, x=statistic, group=effect.factor, shape=effect.factor, color=effect.factor)) +
-  theme_bw(base_size = 20)+
-  theme(legend.position="none")+
-  # ggtitle("Fixed signal, Gaussian Noise")+
-  ylab('Power')+
-  xlab('')+
-  stat_summary(fun.y='mean', geom="point", cex=4) +
-  geom_hline(yintercept=0.05, lty=2)+
-  geom_vline(xintercept=.limits, lty=c(3,2,3))+
-  coord_flip()
-plot.3
-
 pdf(file = paste('Output/',file.name,'.pdf', sep=''))
 plot.3
 dev.off()
