--- a/Round2/file2.Rmd
+++ b/Round2/file2.Rmd
@@ -147,9 +147,13 @@ err.bar <- round(3*sqrt(.05*.95/(n.replications)),3) # confidence limits of p-va
 pvals.1.9 %<>%  as.data.table()
 
 pvals.melt <- melt(pvals.1.9, id.vars=c("effect"), variable.name='statistic') 
-pvals.melt <- pvals.melt[!(statistic %in% statistic.filter1),,]
-
 pvals.melt[,c("reject","effect.factor"):=list(as.numeric(value <= 0.05), as.factor(effect)),] 
+
+# Reorder levels
+pvals.melt$statistic <- factor(pvals.melt$statistic, levels=statistic.levels)
+
+# Filter statistics
+pvals.melt <- pvals.melt[!is.na(statistic),,]
 ```
 
 
